default.html を更新

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   <body>
 <header>
 			<div class="hbgrMenu"><span></span><span></span><span></span></div>
-			<h1>KonbLog</h1>
+			<h1>Articles</h1>
 			<nav>
 				<ul>
 					<li><a href="https://kelpoftruth.com/">トップ</a></li><li><a href="https://kelpoftruth.com/tag">タグ一覧</a></li><li><a href="https://kelpoftruth.com/all">記事一覧</a></li><li><a href="mailto:kelpoftruth@gmail.com">連絡</a></li>
