--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,11 +22,7 @@
       </div>
     </header>
     <article>
-      <h1>Head1</h1>
-      <h2>Head2</h2>
-      <h3>Head3</h3>
-      <p>Paragraph</p>
-      <a href="https://example.com">https://example.com</a>
+      {{content}}
     </article>
     <footer>
       <p>
