--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="{{ "article/assets/css/style.css" }}>
-    <link rel="stylesheet" id="css-theme" href="{{ "article/assets/css/theme-system.css" }}>
+    <link rel="stylesheet" href="{{ "/assets/css/style.css" }}>
+    <link rel="stylesheet" id="css-theme" href="{{ "/assets/css/theme-system.css" }}>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
