--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="{{ "/assets/css/style.css" }}>
-    <link rel="stylesheet" id="css-theme" href="{{ "/assets/css/theme-system.css" }}>
+    <link rel="stylesheet" href="{{ "/article/assets/css/style.css" }}>
+    <link rel="stylesheet" id="css-theme" href="{{ "/article/assets/css/theme-system.css" }}>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
