--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <link rel="stylesheet" href="/path/to/styles/default.css">
-    <script src="/path/to/highlight.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/styles/base16/grayscale-light-min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/highlight.min.js"></script>
+    <!-- and it's easy to individually load additional languages -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/languages/go.min.js"></script>
     <script>hljs.highlightAll();</script>
   </head>
   <body>
@@ -19,9 +21,9 @@
           <button><img src="./system.svg"><span>System</span></button>
         </div>
         <div id="option">
-          <button id="system"><img src="system.svg" alt=""><span>System</span></button>
-          <button id="light"><img src="light.svg" alt=""><span>Light</span></button>
-          <button id="dark"><img src="./dark.svg" alt=""><span>Dark</span></button>
+          <button id="system"><img src="/article/assets/system.svg" alt="System"><span>System</span></button>
+          <button id="light"><img src="/article/assets/light.svg" alt="Light"><span>Light</span></button>
+          <button id="dark"><img src="/article/assets/dark.svg" alt="Dark"><span>Dark</span></button>
         </div>
       </div>
     </header>
@@ -44,20 +46,20 @@
       localStorage.setItem("theme",theme);
       const selected=document.querySelector("#theme #selected");
       if(theme===0){
-        document.querySelector("#css-theme").rel="./theme-system.css";
-        selected.querySelector("img").src="./system.svg";
+        document.querySelector("#css-theme").rel="/article/assets/css/theme-system.css";
+        selected.querySelector("img").src="/article/assets/img/system.svg";
         selected.querySelector("span").innerHTML="System";
         
       }else
       if(theme===1){
-        document.querySelector("#css-theme").rel="./theme-light.css";
-        selected.querySelector("img").src="./light.svg";
+        document.querySelector("#css-theme").rel="/article/assets/css/theme-light.css";
+        selected.querySelector("img").src="/article/assets/img/light.svg";
         selected.querySelector("span").innerHTML="Light";
 
       }else
       if(theme===2){
-        document.querySelector("#css-theme").rel="./theme-dark,css";
-        selected.querySelector("img").src="./dark.svg";
+        document.querySelector("#css-theme").rel="/article/assets/css/theme-dark,css";
+        selected.querySelector("img").src="/article/assets/img/dark.svg";
         selected.querySelector("span").innerHTML="Dark";
         
       }
