--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
           <button><img src="./system.svg"><span>System</span></button>
         </div>
         <div id="option">
-          <button id="system"><img src="/article/assets/system.svg" alt="System"><span>System</span></button>
-          <button id="light"><img src="/article/assets/light.svg" alt="Light"><span>Light</span></button>
-          <button id="dark"><img src="/article/assets/dark.svg" alt="Dark"><span>Dark</span></button>
+          <button id="system"><img src="/article/assets/img/system.svg" alt="System"><span>System</span></button>
+          <button id="light"><img src="/article/assets/img/light.svg" alt="Light"><span>Light</span></button>
+          <button id="dark"><img src="/article/assets/img/dark.svg" alt="Dark"><span>Dark</span></button>
         </div>
       </div>
     </header>
