--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ header {
   margin: 0;
   height: 2.3rem;
   width: 100%;
-  border-bottom: 1px solid #e2e2e2;
+  border-bottom: 1px solid transparent;
   background-color: #f5f5f5;
   padding-bottom: 1rem;
   padding-top: 1rem;
@@ -29,15 +29,9 @@ footer {
   height: fit-content;
   text-align: center;
   font-size: 0.8rem;
-  color: #1a1a1a;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: #dbdbdb;
 }
-footer a {
-  color: #525252;
-}
-
 article h1 {
   font-size: 1.7rem;
   font-weight: 600;
@@ -55,7 +49,6 @@ article h3 {
   float: right;
   margin-right: 1rem;
   padding: 0.2rem;
-  background-color: #bfbfbf;
   border-radius: 0.4rem;
 }
 #theme div{
@@ -103,9 +96,4 @@ article h3 {
 }
 #theme #selected button span{
   color: #7a7a7a !important;
-}
-@media (prefers-color-scheme: dark) {
-  footer{
-    background-color: #393939 !important;
-  }
 }
