--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ article {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   min-height: 100vh;
+  margin-top: 0;
 }
 footer {
   height: fit-content;
@@ -62,6 +63,7 @@ article h3 {
   height: 0px;
   overflow-y: hidden;
   transition: 250ms;
+  background-color: #e0e0e0;
 }
 #theme:hover #option{
   height: 6.9rem;
