--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@ article h2 {
 article h3 {
   font-size: 1rem;
 }
+
 #theme {
   position: relative;
   display: inline-block;
@@ -50,6 +51,7 @@ article h3 {
   float: right;
   margin-right: 1rem;
   padding: 0.2rem;
+  background-color: #bfbfbf;
   border-radius: 0.4rem;
 }
 #theme div{
@@ -63,7 +65,6 @@ article h3 {
   height: 0px;
   overflow-y: hidden;
   transition: 250ms;
-  background-color: #e0e0e0;
 }
 #theme:hover #option{
   height: 6.9rem;
