--- a/assets/css/theme-system.css
+++ b/assets/css/theme-system.css
@@ -1,6 +1,6 @@
 @media (prefers-color-scheme: light) {
   header {
-    background-color: #bfbfbf;
+    background-color: #f4f4f4;
     color: #000;
     border-color: #e2e2e2;
   }
