--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,10 @@ article table{
   border: 1px solid #000;
   padding: 0.25rem;
 }
+article table th,article table td{
+  border: 1px solid #000;
+  padding: 0.25rem;
+}
 
 #theme {
   position: relative;
