--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,23 @@ article table th,article table td{
   border: 1px solid #000;
   padding: 0.25rem;
 }
-
+article blockquote{
+  margin-left: 0;
+  padding-left: 1.5rem;
+  position: relative;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+article blockquote::after{
+  content:"";
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 0.25rem;
+  height: 100%;
+  background-color: #b0b0b0;
+  border-radius: calc(infinity * 1px);
+}
 #theme {
   position: relative;
   display: inline-block;
