default.html を更新

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
     let theme=0;
     const ls=localStorage.getItem("theme");
     function aplyTheme(n){
+      document.querySelector("#theme #option").style.height="0px";
       theme=n;
       localStorage.setItem("theme",theme);
       const selected=document.querySelector("#theme #selected");
