--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -3,7 +3,6 @@
 <!-- Setup Google Analytics -->
 {% include head-custom-google-analytics.html %}
 
-<!-- You can set your favicon here -->
-<!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
+<link rel="favicon" href="https://kelpoftruth.com/avatar.png">
 
 <!-- end custom head snippets -->
