--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,8 @@
     </header>
     <article>
       {{content}}
-      {{next}}
+      <h2>Related</h2>
+      {{site.related_posts}}
     </article>
     <footer>
       <p>
