--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
     </header>
     <article>
       {{content}}
-      <h2>Related</h2>
-      {{site.related_posts}}
+      <h2>Collections</h2>
+      {{site.collections}}
     </article>
     <footer>
       <p>
