--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,8 @@
       </div>
     </header>
     <article>
+      投稿日:&pbsp{{date}}
       {{content}}
-      <h2>Collections</h2>
-      {{site.collections}}
     </article>
     <footer>
       <p>
