--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
       </div>
     </header>
     <article>
-      投稿日:&pbsp{{date}}
+      投稿日:&pbsp; {{date}}
       {{content}}
     </article>
     <footer>
