--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,3 +148,9 @@ article blockquote::after{
 #theme #selected button span{
   color: #7a7a7a !important;
 }
+@media screen and (min-width: 100vh){
+  article{
+    width: 60vw;
+    margin-left: 20vw;
+  }
+}
