--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,18 @@
     {% include head-custom.html %}
   </head>
   <body>
+        <div style="position: fixed;bottom: 0px;right: 0px;">
+      <div id="theme">
+        <div id="selected">
+          <button><img src="system.svg"><span>System</span></button>
+        </div>
+        <div id="option">
+          <button id="system"><img src="system.svg" alt="System"><span>System</span></button>
+          <button id="light"><img src="light.svg" alt="Light"><span>Light</span></button>
+          <button id="dark"><img src="dark.svg" alt="Dark"><span>Dark</span></button>
+        </div>
+      </div>
+    </div>
     <header>
       <span class="title">Article</span>
       <div id="theme">
