--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ html,body,input,button,textarea,select{
 }
 header {
   margin: 0;
-  height: 2.3rem;
+  height: 3rem;
   width: 100%;
   border-bottom: 1px solid transparent;
   background-color: #f5f5f5;
@@ -29,6 +29,8 @@ header {
   font-weight: 600;
   margin-left: 1rem;
   vertical-align: middle;
+  display: block;
+  text-align: center;
 }
 article {
   width: calc(100% - 3rem);
