--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,15 +16,17 @@
   <body>
     <header>
       <span class="title">Article</span>
+      <div style="position: absolute;top: 1.5rem;right: 0px;">
       <div id="theme">
         <div id="selected">
-          <button><img src="./system.svg"><span>System</span></button>
+          <button><img src="system.svg"><span>System</span></button>
         </div>
         <div id="option">
-          <button id="system"><img src="/article/assets/img/system.svg" alt="System"><span>System</span></button>
-          <button id="light"><img src="/article/assets/img/light.svg" alt="Light"><span>Light</span></button>
-          <button id="dark"><img src="/article/assets/img/dark.svg" alt="Dark"><span>Dark</span></button>
+          <button id="system"><img src="system.svg" alt="System"><span>System</span></button>
+          <button id="light"><img src="light.svg" alt="Light"><span>Light</span></button>
+          <button id="dark"><img src="dark.svg" alt="Dark"><span>Dark</span></button>
         </div>
+      </div>
       </div>
     </header>
     <article>
