--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,8 @@
       </div>
     </header>
     <article>
-      {{page.tags}}
+      {{tags}}
+      {{title}}
       {{content}}
     </article>
     <footer>
