--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -3,6 +3,6 @@
 <ul>
   {% for tag_site in site.tags[tag_name] %}
   <li>{{tag_site}}</li>
-  {% forend %}
+  {% endfor %}
 </ul>
-{% forend %}
+{% endfor %}
