--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,8 +1,10 @@
 {% for tag_name in site.tags %}
 <h2>{{tag_name}}</h2>
+
 <ul>
   {% for tag_site in site.tags[tag_name] %}
-  <li>{{tag_site}}</li>
+  <li><a href="{{tag_site.url}}">{{tag_site.title}}</a></li>
   {% endfor %}
 </ul>
+
 {% endfor %}
