--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,14 +1,24 @@
-{% for tag_name in site.tags %}
-<h2>
-  {{ tag_name }}
-</h2>
-<ul>
-  {% for tag_site in site.tags[tag_name] %}
-  <li>
-    <a href="{{ tag_site.url }}">
-      {{ tag_site.title }}
-    </a>
-  </li>
-  {% endfor %}
-</ul>
+{% assign tag_names = "" | split: "|"  %}
+
+{% for posts_by_tag in site.tags %}
+  {% assign tag_names = tag_names | push: posts_by_tag.first %}
 {% endfor %}
+
+{% assign tag_names = tag_names | sort %}
+
+
+<section class="posts-by-tags">
+  {% for tag_name in tag_names %}
+    <div>
+      <h3 id="{{ tag_name }}">
+        {{ tag_name | capitalize | replace: "_", " " }}
+      </h3>
+
+      {% for post in site.tags[tag_name] %}
+        <a href="{{ post.url | prepend: baseurl }}">
+          {{ post.title }}
+        </a>
+      {% endfor %}
+    </div>
+  {% endfor %}
+</section>
