--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -10,12 +10,12 @@
 <section class="posts-by-tags">
   {% for tag_name in tag_names %}
     <div>
-      <h3 id="{{ tag_name }}">
+      <h3>
         {{ tag_name | capitalize | replace: "_", " " }}
       </h3>
 
       {% for post in site.tags[tag_name] %}
-        <a href="{{ post.url | prepend: baseurl }}">
+        <a href="/article{{ post.url | prepend: baseurl }}">
           {{ post.title }}
         </a>
       {% endfor %}
