--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -10,9 +10,9 @@
 <section class="posts-by-tags">
   {% for tag_name in tag_names %}
     <div>
-      <h3>
+      <h2 id="tag_name">
         {{ tag_name | capitalize | replace: "_", " " }}
-      </h3>
+      </h2>
 
       {% for post in site.tags[tag_name] %}
         <a href="/article{{ post.url | prepend: baseurl }}">
