--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <header>
       <span class="title">Article</span>
       <div style="position: absolute;top: 1.5rem;right: 0px;">
-      <div id="theme">
+      <!--<div id="theme">
         <div id="selected">
           <button><img src="system.svg"><span>System</span></button>
         </div>
@@ -27,7 +27,7 @@
           <button id="dark"><img src="dark.svg" alt="Dark"><span>Dark</span></button>
         </div>
       </div>
-      </div>
+      </div>-->
     </header>
     <article>
       <h1>{{title}}</h1>
