--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,18 +16,18 @@ html,body,input,button,textarea,select{
   font-family: NotoSansJP;
 }
 header {
+  position: fixed;
   margin: 0;
   height: 3rem;
   width: 100%;
   border-bottom: 1px solid transparent;
   background-color: #f5f5f5;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
+  padding-bottom: 0.7rem;
+  padding-top: 0.7rem;
 }
 .title {
   font-size: 2.2rem;
   font-weight: 600;
-  margin-left: 1rem;
   vertical-align: middle;
   display: block;
   text-align: center;
