--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ header {
   text-align: center;
 }
 article {
+  padding-top: 4rem;
   width: calc(100% - 3rem);
   padding-left: 1.5rem;
   padding-right: 1.5rem;
