--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,13 +22,14 @@ header {
   height: 3rem;
   width: 100%;
   border-bottom: 1px solid transparent;
-  background-color: #f5f5f5;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px #000;
   padding-bottom: 0.7rem;
   padding-top: 0.7rem;
 }
 .title {
   font-size: 2.2rem;
-  font-weight: 600;
+  font-weight: 500;
   vertical-align: middle;
   display: block;
   text-align: center;
