--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,9 @@ article img{
 article code{
   font-family: Inconsolata;
 }
+article img{
+  max-width: 100%;
+}
 article table{
   border-collapse: collapse;
   border: 1px solid #000;
