--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,14 @@
 @font-face{
   font-family: NotoSansJP;
-  src: url("/article/assets/fonts/NotoSans-Regular.ttf");
+  src: url("../fonts/NotoSans-Regular.ttf");
 }
 @font-face{
   font-family: Inconsolata;
-  src: url("/article/assets/fonts/Inconsolata-Regular.ttf");
+  src: url("../fonts/Inconsolata-Regular.ttf");
+}
+@font-face{
+  font-family: NotoSerifJP;
+  src: url("../fonts/NotoSerifJP-Regular.ttf");
 }
 html,
 body {
@@ -19,20 +23,100 @@ header {
   z-index: 9999999;
   position: fixed;
   margin: 0;
-  height: 3rem;
+  height: fit-content;
   width: 100%;
+  left: 0px;
+  top: 0px;
   border-bottom: 1px solid transparent;
   background-color: #fff;
-  box-shadow: 0px 0px 10px #000;
-  padding-bottom: 0.7rem;
-  padding-top: 0.7rem;
+  box-shadow: 0px 0px 4px #000;
+  padding-bottom: 0.2rem;
+  padding-top: 0.2rem;
+}
+.content{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  position: relative;
+  align-items: center;
 }
 .title {
-  font-size: 2.2rem;
-  font-weight: 500;
+  font-family: NotoSerifJP;
+  font-style: italic;
+  /* font-family: Inconsolata; */
+  font-size: 1.5rem;
+  font-weight: 600;
+  display: inline-block;
+}
+.header-nav{
+  list-style: none;
+  display: none;
+}
+.header-nav li{
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+#select-theme{
+  line-height: 0;
+  padding: 0.7rem;
+  margin: 0;
+  display: none;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 2rem;
+  width: fit-content;
+  height: fit-content;
+  border: unset;
+  background-color: transparent;
+  cursor: pointer;
+}
+#select-theme img{
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-left: 0;
+}
+#themes{
+  list-style: none;
+  display: none;
+  flex-flow: column;
+  position: absolute;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0;
+  background-color: #fff;
+  /* border: 1px solid #9e9e9e; */
+  box-shadow: 0px 0px 5px #0000007a;
+  border-radius: 4px;
+  right: 1rem;
+  top: 3.5rem;
+}
+#themes button{
+  cursor: pointer;
+  font-size: 1rem;
+  display: inline-block;
+  padding: 0.4rem;
+  background-color: transparent;
+  border: unset;
+  width: 100%;
+  padding-right: 1rem;
+  text-align: left;
   vertical-align: middle;
-  display: block;
-  text-align: center;
+  color: inherit;
+}
+#themes button.selected{
+  color: #5252ff;
+}
+#themes button:hover{
+  background-color: #d0d0d0;
+}
+#themes button img{
+  height: 1.2em;
+  margin-right: 0.2em;
+  vertical-align: middle;
 }
 article {
   padding-top: 4rem;
@@ -147,7 +231,7 @@ article blockquote::after{
   color: #555555;
 }
 #theme button img{
-  width: : 1.5rem;
+  width: 1.5rem;
   height: 1.5rem; 
 }
 #theme #selected{
@@ -161,5 +245,15 @@ article blockquote::after{
   article{
     width: 60vw;
     margin-left: 20vw;
+  }
+  header .content{
+    justify-content: left;
+    margin-left: 10rem;
+  }
+  .header-nav{
+    display: flex;
+  }
+  #select-theme{
+    display: flex;
   }
 }
