--- a/assets/css/theme-dark.css
+++ b/assets/css/theme-dark.css
@@ -2,7 +2,7 @@ body{
   background-color: #090909;
 }
 header {
-  background-color: #393939;
+  background-color: #000;
   color: #dfdfdf;
   border-color: #080808;
 }
@@ -20,7 +20,13 @@ footer a {
 article a {
   color: #e2e2e2;
 }
-
+#themes{
+  background-color: #080808;
+  color: #fff;
+}
+#themes button:hover{
+  background-color: #3c3c3c;
+}
 code {
   background-color: #212121 !important;
   border-radius: 0.5rem !important;
