--- a/assets/css/theme-light.css
+++ b/assets/css/theme-light.css
@@ -17,6 +17,13 @@ footer a {
 article a {
   color: #1b1b1b;
 }
+#themes{
+  background-color: #fff;
+  color: #000;
+}
+#themes button:hover{
+  background-color: #d0d0d0;
+}
 
 code {
   background-color: #f5f5f5 !important;
