--- a/assets/css/theme-system.css
+++ b/assets/css/theme-system.css
@@ -18,6 +18,13 @@
   article a {
     color: #1b1b1b;
   }
+  #themes{
+    background-color: #fff;
+    color: #000;
+  }
+  #themes button:hover{
+    background-color: #d0d0d0;
+  }
   
 code {
   background-color: #f5f5f5 !important;
