--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" id="css-theme" href="../assets/css/theme-system.css">
+    <link rel="stylesheet" href="/article/assets/css/style.css">
+    <link rel="stylesheet" id="css-theme" href="/article/assets/css/theme-system.css">
     <title>{{page.title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -25,12 +25,12 @@
         </ul>
       </div>
       <button id="select-theme">
-        <img src="https://kelpoftruth.com/article/assets/img/system.svg" alt="System">
+        <img src="/article/assets/img/system.svg" alt="System">
       </button>
       <ul id="themes">
-        <li><button id="system" class="selected"><img src="https://kelpoftruth.com/article/assets/img/system.svg" alt="System">System</button></li>
-        <li><button id="light"><img src="https://kelpoftruth.com/article/assets/img/light.svg" alt="Light ">Light</button></li>
-        <li><button id="dark"><img src="https://kelpoftruth.com/article/assets/img/dark.svg" alt="Dark">Dark</button></li>
+        <li><button id="system" class="selected"><img src="/article/assets/img/system.svg" alt="System">System</button></li>
+        <li><button id="light"><img src="/article/assets/img/light.svg" alt="Light ">Light</button></li>
+        <li><button id="dark"><img src="/article/assets/img/dark.svg" alt="Dark">Dark</button></li>
       </ul>
       <!-- <div style="position: absolute;top: 1.5rem;right: 0px;"> -->
       <!--<div id="theme">
