--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,10 @@
       <div class="content">
         <span class="title">KelpOfTruth</span>
         <ul class="header-nav">
-          <li><a>Top</a></li>
-          <li><a>Articles</li>
-          <li><a>Tags</a></li>
-          <li><a>Contact</a></li>
+          <li><a href="https://kelpoftruth.com/article">Top</a></li>
+          <li><a href="https://kelpoftruth.com/article/all">Articles</li>
+          <li><a href="https://kelpoftruth.com/tags">Tags</a></li>
+          <li><a href="mailto:kelpoftruth@gmail.com">Contact</a></li>
         </ul>
       </div>
       <button id="select-theme">
