--- a/assets/css/theme-light.css
+++ b/assets/css/theme-light.css
@@ -1,7 +1,8 @@
 header {
-  background-color: #f4f4f4;
+  background-color: #fff;
   color: #000;
   border-color: #e2e2e2;
+  box-shadow: 0px 0px 4px #000;
 }
 article {
   background-color: #fff;
