--- a/assets/css/theme-dark.css
+++ b/assets/css/theme-dark.css
@@ -5,6 +5,7 @@ header {
   background-color: #000;
   color: #dfdfdf;
   border-color: #080808;
+  box-shadow: 0px 0px 4px #fff;
 }
 article {
   background-color: #090909;
