--- a/assets/css/theme-system.css
+++ b/assets/css/theme-system.css
@@ -22,6 +22,7 @@
   #themes{
     background-color: #fff;
     color: #000;
+    box-shadow: 0px 0px 5px #000;
   }
   #themes button:hover{
     background-color: #d0d0d0;
@@ -69,6 +70,7 @@ code {
   #themes{
   background-color: #080808;
   color: #fff;
+    box-shadow: 0px 0px #fff;
 }
 #themes button:hover{
   background-color: #3c3c3c;
