--- a/assets/css/theme-light.css
+++ b/assets/css/theme-light.css
@@ -21,6 +21,7 @@ article a {
 #themes{
   background-color: #fff;
   color: #000;
+  box-shadow: 0px 0px 5px #000;
 }
 #themes button:hover{
   background-color: #d0d0d0;
