--- a/assets/css/theme-dark.css
+++ b/assets/css/theme-dark.css
@@ -24,6 +24,7 @@ article a {
 #themes{
   background-color: #080808;
   color: #fff;
+  box-shadow: 0px 0px 5px #fff;
 }
 #themes button:hover{
   background-color: #3c3c3c;
