--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
     </header>
     <article>
       <h1>{{title}}</h1>
-      <ul>
+      <ul id="tags">
       {% for tag in page.tags %}
         <li>{{tag}}</li>
       {% endfor %}
