--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       <h1>{{page.title}}</h1>
       <ul id="tags">
       {% for tag in page.tags %}
-        <li><a href="https://kelpoftruth.com/article/tags?name={{tag}}</a></li>
+        <li><a href="https://kelpoftruth.com/article/tags?name={{tag}}">{{tag}}</a></li>
       {% endfor %}
       </ul>
       {{page.date}}
