--- a/assets/css/theme-dark.css
+++ b/assets/css/theme-dark.css
@@ -21,6 +21,14 @@ footer a {
 article a {
   color: #e2e2e2;
 }
+  #tags a{
+    color: #fff;
+    text-decoration: none;
+  }
+  #tags li{
+    background-color: ##363636;
+    border-radius: 3px;
+  }
 #themes{
   background-color: #080808;
   color: #fff;
