--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,10 @@ article #tags{
 article #tags li{
   margin-left: 0.5em;
   margin-right: 0.5em;
-  padding: 0.2em;
+  padding: 0.4em;
+}
+article #tags a{
+  line-height: 1em;
 }
 article h1 {
   font-size: 1.7rem;
