--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,13 +32,14 @@
       </ul>
     </header>
     <article>
+      {% assign dates = {{page.date}} | split: " " %}
+      <label class="date">{% dates[0] %}</label>
       <h1>{{page.title}}</h1>
       <ul id="tags">
       {% for tag in page.tags %}
         <li><a href="https://kelpoftruth.com/article/tags?name={{tag}}">{{tag}}</a></li>
       {% endfor %}
       </ul>
-      {{page.date}}
       {{content}}
     </article>
     <footer>
