--- a/assets/css/theme-system.css
+++ b/assets/css/theme-system.css
@@ -19,6 +19,9 @@
   article a {
     color: #1b1b1b;
   }
+  article .date{
+    color: #828282;
+  }
   #tags a{
     color: #545454;
     text-decoration: none;
