--- a/assets/css/theme-dark.css
+++ b/assets/css/theme-dark.css
@@ -21,6 +21,9 @@ footer a {
 article a {
   color: #e2e2e2;
 }
+article .date{
+  color: #fff;
+}
   #tags a{
     color: #fff;
     text-decoration: none;
