--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
     </header>
     <article>
       {% assign dates = {{page.date}} | split: " " %}
-      <label class="date">{% dates[0] %}</label>
+      <label class="date">{{dates[0]}}</label>
       <h1>{{page.title}}</h1>
       <ul id="tags">
       {% for tag in page.tags %}
