--- a/assets/css/theme-dark.css
+++ b/assets/css/theme-dark.css
@@ -29,7 +29,7 @@ article .date{
     text-decoration: none;
   }
   #tags li{
-    background-color: ##363636;
+    background-color: #363636;
     border-radius: 3px;
   }
 #themes{
