--- a/assets/css/theme-system.css
+++ b/assets/css/theme-system.css
@@ -86,7 +86,7 @@ code {
     text-decoration: none;
   }
   #tags li{
-    background-color: ##363636;
+    background-color: #363636;
     border-radius: 3px;
   }
   #themes{
