--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,7 @@ article blockquote::after{
 }
 @media screen and (min-width: 100vh){
   article{
-    margin-top: 3.5rem;
+    padding-top: 5rem;
     width: 50vw;
     margin-left: 20vw;
   }
