--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,9 @@ footer {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+article ifraem{
+  max-width: 100%;
+}
 article #tags{
   display: flex;
   list-style: none;
@@ -158,7 +161,6 @@ article h1 {
 }
 article h1+h1{
   scroll-margin-top: 15rem;
-  scroll-padding: 5rem;
 }
 article h2 {
   font-size: 1.4rem;
