--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@ article h1 {
   font-weight: 600;
 }
 article h1+h1{
-  scroll-margin-top: 15rem;
+  scroll-padding: 15rem;
 }
 article h2 {
   font-size: 1.4rem;
