--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,9 +158,7 @@ article #tags a{
 article h1 {
   font-size: 1.7rem;
   font-weight: 600;
-}
-article h1+h1{
-  scroll-padding: 15rem;
+  scroll-margin: 15rem;
 }
 article h2 {
   font-size: 1.4rem;
