--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,8 +138,10 @@ footer {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-article ifraem{
-  max-width: 100% !important;
+article iframe[src*="youtube"]{
+  aspect-ratio: 560/315;
+  max-width: 80% !important;
+  height: auto !important;
 }
 article #tags{
   display: flex;
