--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -45,6 +45,6 @@
       idx.style.display: block;
     }
   }else{
-    document.querySelector(`.posts-by-tags div#${paramValue}`).style.display: block;
+    document.querySelector(`.posts-by-tags div#${paramValue}`).style.display="block";
   }
 </script>
