--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -39,10 +39,10 @@
   const params = new URLSearchParams(queryString);
 
   const paramValue = params.get('name');
-
+  alert(paramValue);
   if(paramValue===null){
     for(let idx of document.querySelector(".posts-by-tags div")){
-      idx.style.display: block;
+      idx.style.display=block;
     }
   }else{
     document.querySelector(`.posts-by-tags div#${paramValue}`).style.display="block";
