--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -39,9 +39,8 @@
   const params = new URLSearchParams(queryString);
 
   const paramValue = params.get('name');
-  alert(paramValue);
   if(paramValue===null){
-    for(let idx of document.querySelector(".posts-by-tags div")){
+    for(let idx of document.querySelectorAll(".posts-by-tags div")){
       idx.style.display=block;
     }
   }else{
