--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,12 @@
 /* Serif font */
 @font-face{
   font-family: NotoSerifJP;
-  src: url("../fonts/NotoSerifJP-VariableFont_wght.ttf"");
+  src: url("../fonts/NotoSerifJP-VariableFont_wght.ttf");
 }
 /* Mono font */
 @font-face{
   font-family: Inconsolata;
-  src: url("../fonts/Inconsolata-VariableFont_wght.ttf"");
+  src: url("../fonts/Inconsolata-VariableFont_wght.ttf");
 }
 html,
 body {
