--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Sans font */
 @font-face{
   font-family: NotoSansJP;
-  src: url("../fonts/NotoSansJP-VariableFont_wght.ttf");
+  src: url("../fonts/NotoSansJP-VariableFont_wdth,wght.ttf");
 }
 /* Serif font */
 @font-face{
