--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
   </head>
   <body>
-    {{site.pages.title}}
+    {% for idx in site.pages %}
+        {% idx.title %}
+    {% endfor %}
   </body>
 </html>
