--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     {% for idx in site.pages %}
-        {% idx.title %}
+        {% idx %}
     {% endfor %}
   </body>
 </html>
