--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -5,8 +5,12 @@
     <meta charset="utf-8">
   </head>
   <body>
-    {% for idx in site.pages %}
-        {% idx %}
+    <ul>
+    {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
     {% endfor %}
+    </ul>
   </body>
 </html>
