--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <span class="title">KelpOfTruth</span>
         <ul class="header-nav">
           <li><a href="https://kelpoftruth.com/article">Top</a></li>
-          <li><a href="https://kelpoftruth.com/article/all">Articles</li>
+          <li><a href="https://kelpoftruth.com/article/">Articles</li>
           <li><a href="https://kelpoftruth.com/tags">Tags</a></li>
           <li><a href="mailto:kelpoftruth@gmail.com">Contact</a></li>
         </ul>
