--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/article/assets/css/style.css">
     <link rel="stylesheet" id="css-theme" href="/article/assets/css/theme-system.css">
     <title>{{page.title}}</title>
+    <meta name="description" content="{{page.description}}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/highlight.min.js"></script>
