--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -49,8 +49,10 @@
         <ul>
     {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-      <p>{{ post.description }}</p>
+      <a href="{{ post.url }}">
+        <label>{{ post.title }}</label>
+        <p>{{ post.description }}</p>
+      </a>
     </li>
     {% endfor %}
     </ul>
