--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -46,7 +46,7 @@
     </style>
   </head>
   <body>
-        <ul>
+    <ul class="articles">
     {% for post in site.posts %}
     <li>
       <a href="{{ post.url }}">
