--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -4,7 +4,12 @@
     <title>記事一覧</title>
     <meta charset="utf-8" />
     <style>
+      .articles {
+        display: flex;
+        flex-wrap: wrap;
+      }
       .articles li {
+        margin: 2rem;
         display: flex;
         width: calc(300px + 1rem);
         flex-wrap: wrap;
