--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -7,6 +7,7 @@
       .articles {
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
       }
       .articles li {
         margin: 2rem;
