--- a/_layouts/articles.html
+++ b/_layouts/articles.html
@@ -55,7 +55,7 @@
     <ul class="articles">
     {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">
+      <a href="/article{{ post.url | prepend: baseurl }}">
         <label>{{ post.title }}</label>
         <p>{{ post.description }}</p>
       </a>
