--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,9 @@
       <div class="content">
         <span class="title">KelpOfTruth</span>
         <ul class="header-nav">
-          <li><a href="https://kelpoftruth.com/article">Top</a></li>
+          <li><a href="https://kelpoftruth.com/">Top</a></li>
           <li><a href="https://kelpoftruth.com/article/">Articles</li>
-          <li><a href="https://kelpoftruth.com/tags">Tags</a></li>
+          <li><a href="https://kelpoftruth.com/article/tags/">Tags</a></li>
           <li><a href="mailto:kelpoftruth@gmail.com">Contact</a></li>
         </ul>
       </div>
