--- a/_layouts/new_default.html
+++ b/_layouts/new_default.html
@@ -84,5 +84,5 @@
         </footer>
     </main>
 </body>
-<script src="./script.js"></script>
+<script src="https://kelpoftruth.com/script.js"></script>
 </html>
